# silo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: dogfood.sh  install.sh
src/: bootstrap.rs  cli.rs  config.rs  doctor.rs  keychain.rs  launch.rs  main.rs  paths.rs  profile.rs  share.rs  wrap.rs
