[package]
name = "silo"
version = "0.2.0"
edition = "2021"
description = "As many isolated Claude Code profiles as you need — official CLAUDE_CONFIG_DIR primitives, no credential vault swap"
license = "MIT"
repository = "https://github.com/0xNyk/silo"
homepage = "https://github.com/0xNyk/silo"
readme = "README.md"
keywords = ["claude", "claude-code", "profiles", "cli", "security"]
categories = ["command-line-utilities", "development-tools"]
authors = ["0xNyk"]
rust-version = "1.75"

[[bin]]
name = "silo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
which = "7"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
